--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,10 @@
         android:layout_centerInParent="true"
         />
 
+    <me.jifengzhang.toucheventanalysis.MyViewGroup
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
