convert java to kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         />
 
     <me.jifengzhang.toucheventanalysis.MyViewGroup
+        android:id="@+id/myviewgroup"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@color/colorPrimary"
