--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="me.jifengzhang.toucheventanalysis.MainActivity">
+<me.jifengzhang.toucheventanalysis.MyViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <me.jifengzhang.toucheventanalysis.MyView
+        android:id="@+id/btn1"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_centerInParent="true"
+        android:text="click"
         />
-
-    <me.jifengzhang.toucheventanalysis.MyViewGroup
-        android:id="@+id/myviewgroup"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
-        >
-        <me.jifengzhang.toucheventanalysis.MyView
-            android:id="@+id/btn"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:text="click"
-            />
-    </me.jifengzhang.toucheventanalysis.MyViewGroup>
-</RelativeLayout>
+</me.jifengzhang.toucheventanalysis.MyViewGroup>
