--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<me.jifengzhang.toucheventanalysis.scrollconfit.CustomScrollerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="1800dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/head"
@@ -14,11 +14,11 @@
             android:textSize="30sp"
             android:background="@color/colorPrimaryDark"
             />
-        <ListView
+        <me.jifengzhang.toucheventanalysis.scrollconfit.CustomListView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="1500dp"
             />
     </LinearLayout>
 
-</ScrollView>
+</me.jifengzhang.toucheventanalysis.scrollconfit.CustomScrollerView>
