--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1800dp"
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="vertical">
         <TextView
             android:id="@+id/head"
@@ -17,7 +19,7 @@
         <me.jifengzhang.toucheventanalysis.scrollconfit.CustomListView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="1500dp"
+            android:layout_height="800dp"
             />
     </LinearLayout>
 
