--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<me.jifengzhang.toucheventanalysis.MyViewGroup-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="400dp"-->
-        <!--android:layout_height="400dp"-->
-        <!--android:background="@android:color/holo_blue_bright">-->
+    <me.jifengzhang.toucheventanalysis.MyViewGroup2
+        android:orientation="vertical"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:background="@android:color/holo_blue_bright">
 
         <me.jifengzhang.toucheventanalysis.MyView
             android:id="@+id/btn1"
@@ -22,5 +22,5 @@
             android:layout_marginTop="50dp"
             android:layout_marginLeft="50dp"
             />
-    <!--</me.jifengzhang.toucheventanalysis.MyViewGroup>-->
+    </me.jifengzhang.toucheventanalysis.MyViewGroup2>
 </me.jifengzhang.toucheventanalysis.MyViewGroup>
