--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:text="click"
             />
         <me.jifengzhang.toucheventanalysis.MyTextView
+            android:id="@+id/tv"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="测试测试点击"
